[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/menu.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://sounds/music/Swinging Pants.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/sounds/confirmation_001.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "menu"

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_right = 576.0
margin_bottom = 1024.0
rect_scale = Vector2( 0.535, 0.535 )
texture = ExtResource( 1 )

[node name="PlayButton" type="Button" parent="."]
visible = false
margin_left = 199.0
margin_top = 511.0
margin_right = 402.0
margin_bottom = 626.0
flat = true

[node name="QuitButton" type="Button" parent="."]
visible = false
margin_left = 199.0
margin_top = 644.0
margin_right = 402.0
margin_bottom = 759.0
flat = true

[node name="MenuSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="ConfirmationSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.535, 0.535 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/menu = SubResource( 1 )

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
